2006-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): If the datafile we are supposedly
	reading from was never opened, simply return DF_EOF. This relieves the
	caller from having to check this separately before calling df_readline.

	* src/datafile.c (df_open); If the datafile cannot be opened, set
	df_eof and return DF_EOF. FIXME: Having both methods is stupid; we
	should just get rid of df_eof and use the return value.

	* src/graph3d.c (do_3dplot draw_3d_graphbox) src/graphics.c (do_plot): 
	* src/plot3d.c (eval_3dplots): 
	Do a better job of skipping over plots marked NODATA.  In particular do
	not try to scan their data for scaling or plot limits, and do not place
	an entry in the key box.

	Bug #1579867

2006-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Back off to simpler treatment of non-ascii characters.
	"set term svg raw" - pass them through unaltered
	"set term svg escaped" - replace byte-by-byte with &#xNN;

	* configure.in: Print a warning if snprintf() is not found during auto-
	configuration. Recommend that the user provide snprintf() via an
	external version.

2006-10-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Switch to Unicode-compatible representation of octal
	characters given as \xxx in a single-quoted test string.
	Bug #1534649

	* term/svg.trm: Only re-code utf-8 into Unicode if current encoding
	is default or iso_8859_1.

2006-10-14  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Implement full (?) UTF-8 support via escaped unicode
	codepoints.  E.g. rather than relying on the SVG viewer to interpret
	UTF-8 byte sequences, convert them to the form  &#xAAAA; where AAAA
	is the hex representation of the unicode character.

	* term/svg.trm (SVG_options): Do not reset terminal options to default
	values if invoked from `set termoption` rather than `set terminal`.
	Bug #1534649

2006-10-13  Ethan Merritt  <merritt@u.washington.edu>
